--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+# docker-compose up --build
 services:
   nestjs_api:
     build: 
@@ -10,7 +11,3 @@ services:
       - NODE_ENV=development
     volumes:
       - ./src:/usr/src/app/src
-
-
-
-
