--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,13 @@ services:
       - NODE_ENV=development
     volumes:
       - ./src:/usr/src/app/src
+  mysql_db:
+    image: mysql
+    ports:
+      - "3307:3307"
+    environment:
+      - MYSQL_ROOT_PASSWORD=root_password_123
+      - MYSQL_DATABASE=nestjs_docker_db
+      - MYSQL_USER=nestjs_docker_user
+      - MYSQL_PASSWORD=nestjs_docker_password
+      - MYSQL_TCP_PORT=3307
